--- a/public/internship/css/style.css
+++ b/public/internship/css/style.css
@@ -21886,9 +21886,9 @@ dl li {
   -webkit-transition: background 0.25s ease;
   -moz-transition: background 0.25s ease;
   -ms-transition: background 0.25s ease;
-  background: url(../images/other/navbar-cover.jpg) center center no-repeat;
   background-size: cover;
-  height: 262px;
+  background-color: black;
+  height: 102px;
   width: auto;
 }
 
